total fix overflow and better connexion visual feedback

--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -1,6 +1,7 @@
 .content{
-    min-height:87.3vh;
+    min-height:88vh;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .fill-height{
