--- a/front/src/app/footer/footer.component.css
+++ b/front/src/app/footer/footer.component.css
@@ -1,11 +1,12 @@
 footer {
-    margin-top: 8px;
+    /*margin-top: 8px;*/
     display: flex;
     align-items: center;
     line-height: 20px;
 
     text-align:center;
     width: 100%;
+    height: 5vh;
 
     justify-content: center;
   }
